other-mpol/add-imagepullsecrets-for-containers-and-initcontainers/.chainsaw-test/partial-exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: partial-exception
  namespace: default
spec:
  containers:
  - name: first
    image: corp.reg.com/approved:1
  - name: middle
    image: corp.reg.com/needs-secret:1
  - name: last
    image: example/ordinary:1
