other-mpol/add-imagepullsecrets-for-containers-and-initcontainers/.chainsaw-test/partial-exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: preserve-approved-image
  namespace: policy-exceptions
spec:
  policyRefs:
  - kind: MutatingPolicy
    name: add-imagepullsecrets-for-containers-and-initcontainers
  images: [corp.reg.com/approved:1]
  matchConditions:
  - name: target
    expression: object.metadata.?namespace.orValue('') == 'default' && object.metadata.name == 'partial-exception'
