other-mpol/add-imagepullsecrets-for-containers-and-initcontainers/.chainsaw-test/podcontroller-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: pod01-01-init
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: pod01-02-init
        image: corp.reg.com/busybox:1.35
      containers:
      - name: pod01-01
        image: corp.reg.com/busybox:1.35
      - name: pod01-02
        image: ghcr.io/kyverno/test-busybox:1.35
      imagePullSecrets:
      - name: my-secret
      - name: foo-bar
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: pod01-01-init
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: pod01-02-init
            image: corp.reg.com/busybox:1.35
          containers:
          - name: pod01-01
            image: corp.reg.com/busybox:1.35
          - name: pod01-02
            image: ghcr.io/kyverno/test-busybox:1.35
          imagePullSecrets:
          - name: my-secret
          - name: foo-bar
          restartPolicy: OnFailure
