other-mpol/add-imagepullsecrets-for-containers-and-initcontainers/add-imagepullsecrets-for-containers-and-initcontainers.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: add-imagepullsecrets-for-containers-and-initcontainers
  annotations:
    policies.kyverno.io/title: Add imagePullSecrets for Containers and InitContainers
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kyverno-version: 1.6.2
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      Images coming from certain registries require authentication in order to pull them,
      and the kubelet uses this information in the form of an imagePullSecret to pull
      those images on behalf of your Pod. This policy searches for images coming from a
      registry called `corp.reg.com` referenced by either one of the containers or one 
      of the init containers and, if found, will mutate the Pod to add an
      imagePullSecret called `my-secret`.
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments", "daemonsets", "statefulsets"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["jobs", "cronjobs"]
  matchConditions:
    - name: HasCorpRegImage
      expression: |-
        (object.kind == "Pod" &&
        (object.spec.containers.exists(c, c.image.startsWith('corp.reg.com/')) ||
        object.spec.?initContainers.orValue([]).exists(c, c.image.startsWith('corp.reg.com/'))) &&
        !(has(object.spec.imagePullSecrets) && object.spec.imagePullSecrets.exists(s, s.name == 'my-secret'))) ||
        (object.kind in ["Deployment", "DaemonSet", "StatefulSet"] &&
        (object.spec.template.spec.containers.exists(c, c.image.startsWith('corp.reg.com/')) ||
        object.spec.template.spec.?initContainers.orValue([]).exists(c, c.image.startsWith('corp.reg.com/'))) &&
        !(has(object.spec.template.spec.imagePullSecrets) && object.spec.template.spec.imagePullSecrets.exists(s, s.name == 'my-secret'))) ||
        (object.kind == "Job" &&
        (object.spec.template.spec.containers.exists(c, c.image.startsWith('corp.reg.com/')) ||
        object.spec.template.spec.?initContainers.orValue([]).exists(c, c.image.startsWith('corp.reg.com/'))) &&
        !(has(object.spec.template.spec.imagePullSecrets) && object.spec.template.spec.imagePullSecrets.exists(s, s.name == 'my-secret'))) ||
        (object.kind == "CronJob" &&
        (object.spec.jobTemplate.spec.template.spec.containers.exists(c, c.image.startsWith('corp.reg.com/')) ||
        object.spec.jobTemplate.spec.template.spec.?initContainers.orValue([]).exists(c, c.image.startsWith('corp.reg.com/'))) &&
        !(has(object.spec.jobTemplate.spec.template.spec.imagePullSecrets) && object.spec.jobTemplate.spec.template.spec.imagePullSecrets.exists(s, s.name == 'my-secret')))
  mutations:
  # ===== PODS =====
  - patchType: JSONPatch
    jsonPatch:
      expression: |
        object.kind == "Pod" &&
        (
          object.spec.containers.exists(container,
            !exceptions.allowedImages.exists(image, image == container.image) &&
            image(container.image).registry() == "corp.reg.com"
          ) ||
          object.spec.?initContainers.orValue([]).exists(initContainer,
            !exceptions.allowedImages.exists(image, image == initContainer.image) &&
            image(initContainer.image).registry() == "corp.reg.com"
          )
        ) &&
        (
          !has(object.spec.imagePullSecrets) || 
          !object.spec.imagePullSecrets.exists(secret, secret.name == "my-secret")
        ) ?
        (has(object.spec.imagePullSecrets) ?
          [JSONPatch{
            op: "add",
            path: "/spec/imagePullSecrets/0",
            value: {"name": "my-secret"}
          }] :
          [JSONPatch{
            op: "add",
            path: "/spec/imagePullSecrets",
            value: [{"name": "my-secret"}]
          }]
        ) : []

  # ===== DEPLOYMENTS, DAEMONSETS, STATEFULSETS =====
  - patchType: JSONPatch
    jsonPatch:
      expression: |
        object.kind in ["Deployment", "DaemonSet", "StatefulSet"] &&
        (
          object.spec.template.spec.containers.exists(container,
            !exceptions.allowedImages.exists(image, image == container.image) &&
            image(container.image).registry() == "corp.reg.com"
          ) ||
          object.spec.template.spec.?initContainers.orValue([]).exists(initContainer,
            !exceptions.allowedImages.exists(image, image == initContainer.image) &&
            image(initContainer.image).registry() == "corp.reg.com"
          )
        ) &&
        (
          !has(object.spec.template.spec.imagePullSecrets) || 
          !object.spec.template.spec.imagePullSecrets.exists(secret, secret.name == "my-secret")
        ) ?
        (has(object.spec.template.spec.imagePullSecrets) ?
          [JSONPatch{
            op: "add",
            path: "/spec/template/spec/imagePullSecrets/0",
            value: {"name": "my-secret"}
          }] :
          [JSONPatch{
            op: "add",
            path: "/spec/template/spec/imagePullSecrets",
            value: [{"name": "my-secret"}]
          }]
        ) : []

  # ===== JOBS =====
  - patchType: JSONPatch
    jsonPatch:
      expression: |
        object.kind == "Job" &&
        (
          object.spec.template.spec.containers.exists(container,
            !exceptions.allowedImages.exists(image, image == container.image) &&
            image(container.image).registry() == "corp.reg.com"
          ) ||
          object.spec.template.spec.?initContainers.orValue([]).exists(initContainer,
            !exceptions.allowedImages.exists(image, image == initContainer.image) &&
            image(initContainer.image).registry() == "corp.reg.com"
          )
        ) &&
        (
          !has(object.spec.template.spec.imagePullSecrets) || 
          !object.spec.template.spec.imagePullSecrets.exists(secret, secret.name == "my-secret")
        ) ?
        (has(object.spec.template.spec.imagePullSecrets) ?
          [JSONPatch{
            op: "add",
            path: "/spec/template/spec/imagePullSecrets/0",
            value: {"name": "my-secret"}
          }] :
          [JSONPatch{
            op: "add",
            path: "/spec/template/spec/imagePullSecrets",
            value: [{"name": "my-secret"}]
          }]
        ) : []

  # ===== CRONJOBS =====
  - patchType: JSONPatch
    jsonPatch:
      expression: |
        object.kind == "CronJob" &&
        (
          object.spec.jobTemplate.spec.template.spec.containers.exists(container,
            !exceptions.allowedImages.exists(image, image == container.image) &&
            image(container.image).registry() == "corp.reg.com"
          ) ||
          object.spec.jobTemplate.spec.template.spec.?initContainers.orValue([]).exists(initContainer,
            !exceptions.allowedImages.exists(image, image == initContainer.image) &&
            image(initContainer.image).registry() == "corp.reg.com"
          )
        ) &&
        (
          !has(object.spec.jobTemplate.spec.template.spec.imagePullSecrets) || 
          !object.spec.jobTemplate.spec.template.spec.imagePullSecrets.exists(secret, secret.name == "my-secret")
        ) ?
        (has(object.spec.jobTemplate.spec.template.spec.imagePullSecrets) ?
          [JSONPatch{
            op: "add",
            path: "/spec/jobTemplate/spec/template/spec/imagePullSecrets/0",
            value: {"name": "my-secret"}
          }] :
          [JSONPatch{
            op: "add",
            path: "/spec/jobTemplate/spec/template/spec/imagePullSecrets",
            value: [{"name": "my-secret"}]
          }]
        ) : []
