other-mpol/add-imagepullsecrets-for-containers-and-initcontainers/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-imagepullsecrets-for-containers-and-initcontainers
spec:
  steps:
  - name: policy-exceptions-namespace
    skipDelete: true
    try:
    - apply:
        resource: {apiVersion: v1, kind: Namespace, metadata: {name: policy-exceptions}}
  - name: step-01
    try:
    - apply:
        file: ../add-imagepullsecrets-for-containers-and-initcontainers.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: podcontroller-resources.yaml
    - apply:
        file: pod-resources.yaml
  - name: step-03
    try:
    - assert:
        file: podcontroller-patched.yaml
  - name: step-03-partial-exception
    try:
    - apply:
        file: partial-exception.yaml
    - apply:
        file: partial-exception-pod.yaml
    - assert:
        file: partial-exception-pod-patched.yaml
    - assert:
        file: pod-resources-patched.yaml
    - error:
        file: pod-not-patched.yaml
